# f0-discovery

./: Cargo.toml  README.md  build.rs  gen-peripherals.sh  stm32f0discovery.ld
.cargo/: config
examples/: led-1.rs
src/: delay.rs  exception.rs  itm.rs  led.rs  lib.rs
src/peripheral/: dbgmcu.rs  gpio.rs  i2c.rs  rcc.rs  spi.rs  usart.rs
