[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>"]
build = "build.rs"
description = "Crate for interacting with STM32 F0 Discovery board"
documentation = "https://docs.rs/f0-discovery"
keywords = ["arm", "cortex-m", "stm32f0discovery", "stm32"]
license = "MIT OR Apache-2.0"
name = "f0-discovery"
repository = "https://github.com/wezm/f0-discovery"
version = "0.1.0"

[dependencies]
cortex-m = "0.1.3"
r0 = "0.1.0"
volatile-register = "0.1.1"

[dependencies.compiler-builtins-snapshot]
features = ["memcpy"]
version = "0.0.20161008"

[dev-dependencies]
m = "0.1.0"

[features]
default = [
    "default-exception-handler",
    "default-init",
    "default-panic-fmt",
    "examples",
]
default-exception-handler = []
default-init = []
default-panic-fmt = []
examples = []

[profile.release]
lto = true
